--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -1,10 +1,12 @@
 <div class="table-wrapper responsive-table m-t-30">
     <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+    <div class="table-container" style="max-height: 450px; overflow-y: auto;">
+
     <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                 <div class="d-flex align-items-center">
                     <ng-container *ngIf="element.details?.data?.length > 0">
                         <mat-icon>{{ expandedElement === element ? 'arrow_drop_down' : 'arrow_right' }}</mat-icon>
@@ -17,7 +19,7 @@
         <!-- Type Column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
-            <!-- <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_action==1?'Buy':'Sell'}}
+            <!-- <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_action==1?'Buy':'Sell'}}
             </td> -->
             <td mat-cell *matCellDef="let element">
                 <span [ngClass]="this.utilityService.getBadgeClass(element.transaction_action == 1 ? 'Buy' : 'Sell')"
@@ -30,38 +32,38 @@
         <!-- Quantity/Filled Column -->
         <ng-container matColumnDef="qtyFilled">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Qty/Filled </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_quantity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_quantity}} </td>
         </ng-container>
 
         <!-- Order Price Column -->
         <ng-container matColumnDef="orderPrice">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Price </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_price}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_price}} </td>
         </ng-container>
 
         <!-- Executed At Column -->
         <ng-container matColumnDef="executedAt">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{
                 this.utilityService.convertDateTime(element.buy_response_update_time)}} </td>
         </ng-container>
 
         <!-- Average Price Column -->
         <ng-container matColumnDef="avgPrice">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Avg Price </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.transaction_price}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.transaction_price}} </td>
         </ng-container>
 
         <!-- LTP Column -->
         <ng-container matColumnDef="ltp">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.last_traded_price}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.last_traded_price}} </td>
         </ng-container>
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1">Order Status </th>
-            <!-- <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.progress_status}} </td> -->
+            <!-- <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.progress_status}} </td> -->
             <td mat-cell *matCellDef="let element">
                 <span [ngClass]="this.utilityService.getBadgeClass(element.progress_status)" class="rounded f-w-600 p-6 p-y-4 f-s-12">
                     {{ element.progress_status | titlecase }}
@@ -72,47 +74,47 @@
         <!-- Date Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Date </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{
                 this.utilityService.convertDateTime(element.transaction_date)}} </td>
         </ng-container>
 
         <!-- Validity Column -->
         <ng-container matColumnDef="validity">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Validity </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.validity?element.validity:'Carry Fwd'}}
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.validity?element.validity:'Carry Fwd'}}
             </td>
         </ng-container>
 
         <!-- Product Column -->
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.product?element.product:'F&O'}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.product?element.product:'F&O'}} </td>
         </ng-container>
 
         <!-- Order Type Column -->
         <ng-container matColumnDef="orderType">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderType?element.orderType:'Normal'}}
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.orderType?element.orderType:'Normal'}}
             </td>
         </ng-container>
 
         <!-- Order ID Column -->
         <ng-container matColumnDef="xtsOrderId">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order ID </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.order_id}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.order_id}} </td>
         </ng-container>
 
         <!-- Exchange Order No Column -->
         <ng-container matColumnDef="exchangeOrderNo">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Exchange Order No </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                 {{element.exchangeOrderNo?element.exchangeOrderNo:'12358'}} </td>
         </ng-container>
 
         <!-- Manual Square Off -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Manual Square Off </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                 <button mat-raised-button color="warn"
                     [disabled]="!(element.progress_status == 'Manual Order Placed' || element.progress_status == 'Order Placed')"
                     (click)="buySell(); $event.stopPropagation()" class="m-b-10">
@@ -136,31 +138,31 @@
                             <!-- <ng-container matColumnDef="master_position_id">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Master
                                     Position Id </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                                     {{element.master_position_id}} </td>
                             </ng-container> -->
                             <ng-container matColumnDef="sector_name">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol
                                 </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.sector_name}} </td>
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12"> {{element.sector_name}} </td>
                             </ng-container>
                             <ng-container matColumnDef="square_off_quantity">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Quantity </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                                     {{element.square_off_quantity}} </td>
                             </ng-container>
                             <ng-container matColumnDef="square_off_position">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Position </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                                     {{ this.utilityService.convertDateTime(element.square_off_position)}}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="sell_response_update_time">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At
                                 </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                                     {{element.sell_response_update_time}} </td>
                             </ng-container>
                             <ng-container matColumnDef="progress_status">
@@ -176,13 +178,13 @@
                             <ng-container matColumnDef="square_off_time">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Time </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                                     {{ this.utilityService.convertDateTime(element.square_off_time)}} </td>
                             </ng-container>
                             <ng-container matColumnDef="square_off_order_id">
                                 <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Square Off
                                     Order Id </th>
-                                <td mat-cell *matCellDef="let element" class="mat-body-1">
+                                <td mat-cell *matCellDef="let element" class="mat-body-1 f-s-12">
                                     {{element.square_off_order_id}} </td>
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="innerDisplayedColumns"></tr>
@@ -200,6 +202,7 @@
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
+    </div>
     <!-- No Data Found Message -->
     <div *ngIf="dataSource?.data?.length === 0" class="no-data-message">
         <p>No data found.</p>
