--- a/src/app/pages/trading/order-book/order-book.component.scss
+++ b/src/app/pages/trading/order-book/order-book.component.scss
@@ -45,3 +45,36 @@ tr.example-detail-row {
     // padding: 16px;
   }
 }
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: #ecf2ff;
+}
+/* Custom scrollbar styles */
+.table-container {
+  max-height: 450px;
+  overflow-y: auto;
+  overflow-x: auto;
+
+  /* Webkit browsers */
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+
+  /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
